--- a/app/src/main/res/layout/fragment_recommended_search_detail.xml
+++ b/app/src/main/res/layout/fragment_recommended_search_detail.xml
@@ -84,7 +84,8 @@
             android:id="@+id/recommended_book_intro_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="파도님의 맞춤 추천 독서를 즐겨봐요!"
+            android:text="유저님의 맞춤 추천 독서를 즐겨봐요!"
+            android:layout_marginTop="3dp"
             android:textSize="13sp"
             android:textColor="@color/white_65"
             app:layout_constraintTop_toBottomOf="@id/recommended_book_tv"
