--- a/app/src/main/res/drawable/gradation_effect_background.xml
+++ b/app/src/main/res/drawable/gradation_effect_background.xml
@@ -1,7 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:angle="270"
-        android:startColor="#B3000000"
-        android:endColor="#00000000" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 위쪽 그라데이션 -->
+    <item>
+        <shape>
+            <gradient
+                android:angle="270"
+                android:startColor="#B3111111"
+                android:centerColor="#00111111"
+                android:endColor="#00000000"
+                android:type="linear" />
+        </shape>
+    </item>
+
+    <!-- 아래쪽 그라데이션 -->
+    <item>
+        <shape>
+            <gradient
+                android:angle="90"
+                android:startColor="#B36B6969"
+                android:centerColor="#006B6969"
+                android:endColor="#00000000"
+                android:type="linear" />
+        </shape>
+    </item>
+</layer-list>
