--- a/app/src/main/res/layout/activity_search_main.xml
+++ b/app/src/main/res/layout/activity_search_main.xml
@@ -51,8 +51,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/search_main_layout"
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="0dp"
         android:background="@color/black"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/search_main_input_et"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
@@ -61,7 +63,7 @@
             android:id="@+id/recent_search_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="15dp"
+            android:paddingTop="20dp"
             android:layout_marginStart="20dp"
             android:text="최근 검색어"
             android:textColor="@color/white"
