--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,9 @@
         <item name="cornerSize">28dp</item>
     </style>
 
+    <style name="CustomRadioButton" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/primary_50</item>
+        <item name="colorControlNormal">@color/white</item>
+    </style>
+
 </resources>
