--- a/app/src/main/res/layout/fragment_scrap_custom_toast.xml
+++ b/app/src/main/res/layout/fragment_scrap_custom_toast.xml
@@ -6,20 +6,19 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#212225"
-        app:cardCornerRadius="12dp"
+        app:cardCornerRadius="6dp"
         app:cardElevation="3dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="350dp"
             android:layout_height="60dp"
-            android:paddingStart="20dp"
+            android:paddingStart="7dp"
             android:paddingEnd="20dp">
 
             <ImageView
                 android:id="@+id/scrap_item_iv"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
                 android:src="@drawable/img_scrap_book"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +28,7 @@
                 android:id="@+id/scrap_item_name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:text="도서"
                 android:textColor="@android:color/white"
                 android:textSize="15dp"
