--- a/app/src/main/res/layout/item_letter.xml
+++ b/app/src/main/res/layout/item_letter.xml
@@ -141,6 +141,7 @@
         android:layout_marginTop="8dp">
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/togle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/CustomMaterialButton"
