--- a/app/src/main/res/layout/item_bookclub_book_participation.xml
+++ b/app/src/main/res/layout/item_bookclub_book_participation.xml
@@ -19,7 +19,7 @@
             android:id="@+id/book_bg_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/img_bookclub_particiaption_book_bg"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +41,7 @@
         android:id="@+id/book_iv"
         android:layout_width="55dp"
         android:layout_height="82dp"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         android:elevation="4dp"
         android:background="@color/transparent"
         android:src="@drawable/img_book_participant_book_1"
