--- a/app/src/main/res/layout/item_certify_photo.xml
+++ b/app/src/main/res/layout/item_certify_photo.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/img_bookclub_book_1"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:background="@color/transparent"/>
 
     </androidx.cardview.widget.CardView>
