--- a/app/src/main/res/layout/activity_mypage_scrap_detail.xml
+++ b/app/src/main/res/layout/activity_mypage_scrap_detail.xml
@@ -19,7 +19,7 @@
         />
 
     <TextView
-        android:id="@+id/mypage_scrap_detail_tv"
+        android:id="@+id/folder_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="도서"
@@ -35,7 +35,7 @@
         android:id="@+id/scrap_count_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="6"
+        android:text="6개의 스크랩"
         android:textSize="13sp"
         android:textColor="@color/white"
         android:fontFamily="@font/pretendard_medium"
@@ -45,17 +45,6 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="개의 스크랩"
-        android:textSize="13sp"
-        android:textColor="@color/colorLabelNeutral"
-        android:fontFamily="@font/pretendard_medium"
-        app:layout_constraintTop_toTopOf="@+id/scrap_count_tv"
-        app:layout_constraintBottom_toBottomOf="@+id/scrap_count_tv"
-        app:layout_constraintStart_toEndOf="@+id/scrap_count_tv"/>
-
-    <TextView
         android:id="@+id/mypage_scrap_edit_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,24 +52,53 @@
         android:textSize="13sp"
         android:textColor="@color/colorPrimaryNormal"
         android:fontFamily="@font/pretendard_medium"
-        android:layout_marginEnd="26dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintTop_toTopOf="@+id/scrap_count_tv"
         app:layout_constraintBottom_toBottomOf="@+id/scrap_count_tv"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mypage_scrap_detail_rv"
+    <TextView
+        android:id="@+id/no_scrap_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="담긴 스크랩이 없어요."
+        android:textSize="16sp"
+        android:textColor="@color/colorLabelAlternative"
+        android:fontFamily="@font/pretendard_regular"
+        android:layout_marginTop="236dp"
+        app:layout_constraintTop_toBottomOf="@+id/scrap_count_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    
+    <TextView
+        android:id="@+id/add_scrap_btn"
+        android:layout_width="114dp"
+        android:layout_height="27dp"
+        android:background="@drawable/white_rec_border_half"
+        android:text="책/공간 추가하기"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+        android:fontFamily="@font/pretendard_medium"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/no_scrap_tv"
+        app:layout_constraintStart_toStartOf="@+id/no_scrap_tv"
+        app:layout_constraintEnd_toEndOf="@+id/no_scrap_tv"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mypage_scrap_detail_rv"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:overScrollMode="never"
-        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-        app:spanCount="3"
-        tools:listitem="@layout/item_mypage_scrap_detail"
         android:layout_marginTop="17dp"
-        android:paddingHorizontal="14dp"
+        android:paddingStart="14dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrap_count_tv"/>
+        app:layout_constraintTop_toBottomOf="@+id/scrap_count_tv"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_mypage_scrap_detail"/>
 
     <LinearLayout
         android:id="@+id/bottom_btns_ll"
