--- a/app/src/main/res/layout/fragment_mypage_scrap.xml
+++ b/app/src/main/res/layout/fragment_mypage_scrap.xml
@@ -46,16 +46,20 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/scrap_rv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHorizontal_weight="1"
         android:overScrollMode="never"
-        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        android:layout_marginTop="15dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         tools:listitem="@layout/item_mypage_scrap_folder"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="9dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrap_count_tv"/>
+        app:layout_constraintTop_toBottomOf="@+id/scrap_count_tv"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     <androidx.appcompat.widget.AppCompatButton
