--- a/app/src/main/res/layout/fragment_mypage_scrap_detail_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_mypage_scrap_detail_bottom_sheet.xml
@@ -3,31 +3,100 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/background_bottom_sheet"
-    android:padding="16dp">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/scrap_title_tv"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="이동하기"
-        android:textSize="20sp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="14dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
+        android:background="@drawable/background_bottom_sheet"
+        android:paddingTop="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="30dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/bottom_btns_ll">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/scrap_bottom_sheet_rv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/scrap_title_tv"
+        <TextView
+            android:id="@+id/scrap_title_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이동하기"
+            android:textSize="20sp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="14dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/scrap_bottom_sheet_rv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/scrap_title_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/scrap_title_tv"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--    <ImageView-->
+<!--        android:layout_width="0dp"-->
+<!--        app:layout_constraintHorizontal_weight="1"-->
+<!--        android:layout_height="20dp"-->
+<!--        android:rotation="180"-->
+<!--        android:elevation="4dp"-->
+<!--        android:src="@drawable/color_bookclub_participation_gradient"-->
+<!--        android:background="@color/transparent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/bottom_btns_ll"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
+
+    <LinearLayout
+        android:id="@+id/bottom_btns_ll"
+        android:layout_width="match_parent"
+        android:layout_height="73dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:elevation="20dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/scrap_title_tv"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#292A2D"
+        android:visibility="visible">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/cancel_btn"
+            android:layout_width="158dp"
+            android:layout_height="46dp"
+            android:layout_weight="1"
+            android:text="취소하기"
+            android:background="@drawable/primary_btn_bg"
+            android:textColor="@color/button_text_color"
+            android:layout_marginStart="17dp"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:enabled="false"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/move_btn"
+            android:layout_width="158dp"
+            android:layout_height="46dp"
+            android:layout_weight="1"
+            android:text="이동하기"
+            android:background="@drawable/primary_btn_bg"
+            android:textColor="@color/button_text_color"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="17dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:enabled="false"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
