--- a/app/src/main/res/layout/item_bookclub_book_members.xml
+++ b/app/src/main/res/layout/item_bookclub_book_members.xml
@@ -18,7 +18,7 @@
             android:id="@+id/item_bookclub_book_members_cover_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:src="@drawable/img_bookclub_member"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
