--- a/app/src/main/res/layout/item_mypage_scrap_detail.xml
+++ b/app/src/main/res/layout/item_mypage_scrap_detail.xml
@@ -9,7 +9,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/mypage_scrap_detail_cardview"
+        android:id="@+id/book_cardview"
         android:layout_width="98dp"
         android:layout_height="152dp"
         app:cardCornerRadius="5dp"
@@ -18,11 +18,11 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
-            android:id="@+id/mypage_scrap_detail_book_iv"
+            android:id="@+id/book_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/img_review_book3"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:background="@color/myPageScrapBg"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,8 +37,8 @@
         android:elevation="2dp"
         android:scaleType="center"
         android:visibility="gone"
-        app:layout_constraintTop_toTopOf="@+id/mypage_scrap_detail_cardview"
-        app:layout_constraintStart_toStartOf="@+id/mypage_scrap_detail_cardview"/>
+        app:layout_constraintTop_toTopOf="@+id/book_cardview"
+        app:layout_constraintStart_toStartOf="@+id/book_cardview"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
