--- a/app/src/main/res/layout/item_mypage_scrap_folder.xml
+++ b/app/src/main/res/layout/item_mypage_scrap_folder.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingHorizontal="11dp"
@@ -11,9 +11,10 @@
         android:id="@+id/item_review_folder_cardview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
+        app:cardCornerRadius="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.gridlayout.widget.GridLayout
             android:layout_width="wrap_content"
@@ -28,28 +29,32 @@
                 android:layout_width="73dp"
                 android:layout_height="73dp"
                 android:scaleType="center"
-                android:background="@drawable/img_mypage_scrap_book1"/>
+                android:adjustViewBounds="true"
+                android:background="#252527"/>
 
             <ImageView
                 android:id="@+id/scrap_folder_iv2"
                 android:layout_width="73dp"
                 android:layout_height="73dp"
                 android:scaleType="center"
-                android:background="@drawable/img_mypage_scrap_book3"/>
+                android:adjustViewBounds="true"
+                android:background="#252527"/>
 
             <ImageView
                 android:id="@+id/scrap_folder_iv3"
                 android:layout_width="73dp"
                 android:layout_height="73dp"
                 android:scaleType="center"
-                android:background="@drawable/img_mypage_scrap_book2"/>
+                android:adjustViewBounds="true"
+                android:background="#252527"/>
 
             <ImageView
                 android:id="@+id/scrap_folder_iv4"
                 android:layout_width="73dp"
                 android:layout_height="73dp"
                 android:scaleType="center"
-                android:background="@drawable/img_mypage_scrap_book4"/>
+                android:adjustViewBounds="true"
+                android:background="#252527"/>
 
         </androidx.gridlayout.widget.GridLayout>
 
