--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,4 +39,8 @@
         <item name="colorControlNormal">@color/white</item>
     </style>
 
+    <style name="RoundedImageView">
+        <item name="cornerSize">4dp</item>
+    </style>
+
 </resources>
