--- a/app/src/main/res/layout/fragment_recommended_search_place_detail.xml
+++ b/app/src/main/res/layout/fragment_recommended_search_place_detail.xml
@@ -8,6 +8,7 @@
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_recommended_search_place_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="50dp">
