--- a/app/src/main/res/layout/activity_change_info.xml
+++ b/app/src/main/res/layout/activity_change_info.xml
@@ -7,11 +7,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/setting_change_info_back"
+        android:id="@+id/back_btn"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:src="@drawable/ic_prev_arrow"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
         android:scaleType="center"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +25,7 @@
         android:textSize="20sp"
         android:textColor="@color/colorLabelNormal"
         android:fontFamily="@font/pretendard_bold"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="26dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -40,8 +40,6 @@
         app:layout_constraintTop_toBottomOf="@+id/setting_change_info_tv"
         app:layout_constraintStart_toStartOf="parent"
         />
-
-
 
     <LinearLayout
         android:id="@+id/change_info_ll"
@@ -84,6 +82,16 @@
         </LinearLayout>
 
 
+
+        <TextView
+            android:id="@+id/password_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="비밀번호 변경"
+            android:textSize="16sp"
+            android:textColor="@color/colorLabelNormal"
+            android:fontFamily="@font/pretendard_medium"
+            android:paddingVertical="18dp"/>
 
         <TextView
             android:id="@+id/alarm_tv"
