--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -7,11 +7,11 @@
     android:background="@color/colorMainBg">
 
     <ImageView
-        android:id="@+id/mypage_profile_back_iv"
+        android:id="@+id/back_btn"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:src="@drawable/ic_prev_arrow"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
         android:scaleType="center"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
         android:text="프로필 변경"
         android:textSize="20sp"
         android:textColor="@color/colorLabelNormal"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="26dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -42,15 +42,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+<!--    <ImageView-->
+<!--        android:id="@+id/change_image_btn"-->
+<!--        android:layout_width="39dp"-->
+<!--        android:layout_height="39dp"-->
+<!--        android:layout_marginTop="79dp"-->
+<!--        android:layout_marginStart="84dp"-->
+<!--        android:src="@drawable/ic_camera"-->
+<!--        android:scaleType="center"-->
+<!--        app:layout_constraintTop_toTopOf="@id/profile_image_iv"-->
+<!--        app:layout_constraintStart_toStartOf="@id/profile_image_iv"/>-->
+
     <ImageButton
         android:id="@+id/change_image_btn"
-        android:layout_width="39dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginStart="84dp"
-        android:src="@color/colorLabelAlternative"
-        android:background="@drawable/white_border"
-        android:clipToOutline="true"
+        android:padding="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:layout_marginStart="80dp"
+        android:background="@color/transparent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_camera"
         app:layout_constraintTop_toTopOf="@id/profile_image_iv"
         app:layout_constraintStart_toStartOf="@id/profile_image_iv"/>
 
@@ -61,7 +73,7 @@
         android:text="닉네임"
         android:textColor="@android:color/white"
         android:layout_marginTop="36dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="25dp"
         app:layout_constraintTop_toBottomOf="@id/profile_image_iv"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -70,9 +82,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/profile_nickname_tv"
-        app:layout_constraintStart_toStartOf="@id/profile_nickname_tv"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="20dp">
 
         <EditText
             android:id="@+id/nickname_et"
@@ -80,7 +93,10 @@
             android:layout_height="48dp"
             android:background="@drawable/edit_text_radius_8"
             android:hint="닉네임 입력"
-            android:textColor="@color/colorLabelAssistive"
+            android:textColorHint="@color/colorLabelAssistive"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:fontFamily="@font/pretendard_regular"
             android:layout_marginEnd="20dp"
             android:paddingStart="16dp"/>
 
@@ -89,36 +105,56 @@
             android:layout_width="60dp"
             android:layout_height="29dp"
             android:text="중복확인"
+            android:background="@drawable/primary_btn_bg"
+            android:textColor="@color/button_text_color"
             android:textSize="11sp"
-            android:background="@color/colorPrimaryNormal"
-            android:textColor="@color/colorPrimary10"
             android:layout_gravity="end|center"
+            android:enabled="false"
             android:layout_marginEnd="32dp"/>
 
 
     </FrameLayout>
 
     <TextView
-        android:id="@+id/nickname_poss_iv"
+        android:id="@+id/nickname_poss_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="사용 가능한 닉네임입니다."
         android:textColor="@color/colorPrimaryNormal"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="5dp"
+        app:layout_constraintTop_toBottomOf="@id/nickname_et_fl"
+        app:layout_constraintStart_toStartOf="@id/nickname_et_fl"/>
+
+    <TextView
+        android:id="@+id/nickname_error_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="사용 불가능한 닉네임입니다."
+        android:textColor="@color/red"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="5dp"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/nickname_et_fl"
         app:layout_constraintStart_toStartOf="@id/nickname_et_fl"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/confirm_btn"
+        android:id="@+id/change_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="변경하기"
         android:background="@drawable/primary_btn_bg"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/nickname_poss_iv"
-        app:layout_constraintStart_toStartOf="@id/nickname_poss_iv"
-        app:layout_constraintEnd_toEndOf="@id/nickname_et_fl"
-        android:layout_marginTop="234dp"
-        android:layout_marginEnd="20dp"/>
+        android:textColor="@color/button_text_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="59dp"
+        android:layout_marginHorizontal="16dp"
+        android:enabled="false"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
