--- a/app/src/main/res/layout/activity_bookclub_book_review_detail.xml
+++ b/app/src/main/res/layout/activity_bookclub_book_review_detail.xml
@@ -35,6 +35,7 @@
                 android:layout_marginTop="22dp"
                 android:background="@drawable/circle_background"
                 android:clipToOutline="true"
+                android:scaleType="centerCrop"
                 android:src="@drawable/img_person_icon"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/back_btn" />
