--- a/app/src/main/res/drawable/rounded_recent_search.xml
+++ b/app/src/main/res/drawable/rounded_recent_search.xml
@@ -1,12 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 배경 색상 -->
-    <solid android:color="#3A3C40" />
+    <solid android:color="#47AEB0B6" />
 
     <!-- 테두리 색상과 두께 -->
     <stroke
         android:width="1dp"
-        android:color="#3A3C40" />
+        android:color="#47AEB0B6" />
 
     <!-- 모서리 둥글기 -->
     <corners android:radius="24dp" />
